--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.activity.admin.InsertActivity"></activity>
+        <activity android:name=".view.activity.member.CheckInActivity"></activity>
+        <activity android:name=".view.activity.member.HistoryActivity" />
+        <activity android:name=".view.activity.admin.InsertActivity" />
         <activity android:name=".view.activity.admin.AdminBoardActivity" />
         <activity android:name=".view.activity.LoginActivity">
             <intent-filter>
