Add History Member

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
             android:screenOrientation="landscape"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
         <activity android:name=".view.activity.member.MemberDashboardActivity" />
-        <activity android:name=".view.activity.member.HistoryActivity" />
+        <activity android:name=".view.fragment.member.HistoryFragment" />
         <activity android:name=".view.activity.admin.InsertActivity" />
         <activity android:name=".view.activity.admin.AdminBoardActivity" />
         <activity android:name=".view.activity.LoginActivity">
