--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,11 +82,14 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.3.1'
 
-    implementation 'com.google.android.material:material:1.2.0-alpha04'
+    //MaterialDesign
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
 
+    //FaceRecognition
     implementation 'ch.zhaw:facerecognitionlibrary:1.5.3'
 
+    //Toast
     implementation 'com.shamanland:xdroid-toaster:0.0.10'
 }
