--- a/data/build.gradle
+++ b/data/build.gradle
@@ -26,14 +26,14 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    
+
     flavorDimensions "default"
     productFlavors{
         develop {
-            buildConfigField("String", "BASE_URL", "\"https://private-6fdd31-intern1.apiary-mock.com/\"")
+            buildConfigField("String", "BASE_URL", "\"http://private-6fdd31-intern1.apiary-mock.com/\"")
         }
         production {
-            buildConfigField("String", "BASE_URL", "\"https://private-8a0488-dosenapp.apiary-mock.com/\"")
+            buildConfigField("String", "BASE_URL", "\"http://absen-service.apps.pcf.dti.co.id/\"")
         }
     }
 
