--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,5 @@ dependencies {
 
     //Toast
     implementation 'com.shamanland:xdroid-toaster:0.0.10'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 }
