--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     defaultConfig {
         applicationId "example.com.absensiapp"
         minSdkVersion 21
-        targetSdkVersion 21
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -26,7 +26,8 @@ android {
             buildConfigField("String", "BASE_URL", "\"http://private-6fdd31-intern1.apiary-mock.com/\"")
         }
         production {
-            buildConfigField("String", "BASE_URL", "\"http://absen-service.apps.pcf.dti.co.id/\"")
+            //buildConfigField("String", "BASE_URL", "\"http://absen-service.apps.pcf.dti.co.id/\"")
+            buildConfigField("String", "BASE_URL", "\"http://presensi-jdl-uat.apps.pcf.dti.co.id/\"")
         }
     }
 
@@ -61,15 +62,15 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.25.2'
 
     //ButterKnife
-    implementation 'com.jakewharton:butterknife:10.1.0'
+    annotationProcessor 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
     //Gson
     implementation 'com.google.code.gson:gson:2.8.6'
 
     //Lombok
-    compileOnly 'org.projectlombok:lombok:1.18.10'
-    annotationProcessor 'org.projectlombok:lombok:1.18.10'
+    compileOnly 'org.projectlombok:lombok:1.18.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
 
     //RecycleView
     implementation "androidx.recyclerview:recyclerview:1.1.0"
@@ -95,5 +96,4 @@ dependencies {
 
     //Toast
     implementation 'com.shamanland:xdroid-toaster:0.0.10'
-    implementation 'com.android.support:cardview-v7:28.0.0'
 }
