--- a/data/build.gradle
+++ b/data/build.gradle
@@ -33,7 +33,8 @@ android {
             buildConfigField("String", "BASE_URL", "\"http://private-6fdd31-intern1.apiary-mock.com/\"")
         }
         production {
-            buildConfigField("String", "BASE_URL", "\"http://absen-service.apps.pcf.dti.co.id/\"")
+            //buildConfigField("String", "BASE_URL", "\"http://absen-service.apps.pcf.dti.co.id/\"")
+            buildConfigField("String", "BASE_URL", "\"http://presensi-jdl-uat.apps.pcf.dti.co.id/\"")
         }
     }
 
@@ -60,6 +61,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
 
     //Lombok
-    compileOnly 'org.projectlombok:lombok:1.18.10'
-    annotationProcessor 'org.projectlombok:lombok:1.18.10'
+    compileOnly 'org.projectlombok:lombok:1.18.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
+
+    //Mockito
+    testImplementation "org.mockito:mockito-core:2.23.0"
 }
